--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .container{
-	display: grid;
-	grid-template-rows: 1fr 2fr 1fr;
+	/* display: grid;
+	grid-template-rows: 1fr 2fr 1fr; */
 }
 
 
@@ -12,17 +12,29 @@
 
 .header{
 	display: grid;
+	border: 1px outset;
+	height: 60px;
 }
 
 .slogan{
 	display: grid;
+	border: 1px outset;
+	height: 60px;
 }
 
-middle{display: grid;
+.game-container{
+	display: grid;
+	height: 300px;
+	grid-template-columns: 1fr 2fr 1fr;
+	border: 1px outset;
 }
 
-middle{display: grid;
-}footer
+footer{
+	/* display: grid;
+	height:50px;
+	border: 1px outset; */
+}
+
 
 /* .container{
 	display: grid;
